@@ -1,5 +1,8 @@
 2018-05-07  Adhemerval Zanella  <adhemerval.zanella@linaro.org>
 
+	* sysdeps/i386/nptl/tls.h (THREAD_ATOMIC_CMPXCHG_VAL,
+	THREAD_ATOMIC_AND, THREAD_ATOMIC_BIT_SET): Remove macros.
+
 	* sysdeps/x86_64/nptl/tls.h (THREAD_ATOMIC_CMPXCHG_VAL,
 	THREAD_ATOMIC_AND, THREAD_ATOMIC_BIT_SET): Remove macros.
 
